--- a/style.css
+++ b/style.css
@@ -1,9 +1,9 @@
 body {
   --color-primary: #009579;
   --color-primary-dark: #88a5a0;
-  --color-secondary: #ffffff;
+  --color-secondary: #f3f1f1;
   --color-error: #cc3333;
-  --color-success: #10ec00;
+  --color-success: #7596f1;
   --border-radius: 4px;
 
   margin: 0;
@@ -12,7 +12,7 @@ body {
   align-items: center;
   justify-content: center;
   font-size: 18px;
-  background-image: url(./screens/assets/cartoon-background-007.jpg);
+  background-image: url(./assets/undraw_World_re_768g.png);
   background-size: cover;
 }
 
@@ -23,7 +23,7 @@ body {
   padding: 2rem;
   box-shadow: 0 0 40px rgba(0, 0, 0, 0.2);
   border-radius: var(--border-radius);
-  background: #ffffff;
+  background: #ffffff0c;
 }
 
 .container,
@@ -33,7 +33,7 @@ body {
 }
 .container {
   text-align: center;
-  background-color: rgba(221, 226, 224, 0.534);
+  background-color: rgba(78, 79, 131, 0.534);
 }
 #axiom {
   width: 130px;
