--- a/map/style.css
+++ b/map/style.css
@@ -311,6 +311,13 @@ p {
   right: 1%;
   display: inline-block;
 }
+.dropdown4 {
+  position: absolute;
+  background-color: rgb(248, 248, 248);
+  top: 38%;
+  right: 0%;
+  display: inline-block;
+}
 
 .dropdown-content {
   display: none;
@@ -381,4 +388,66 @@ h3 {
 }
 button {
   border-radius: 2px;
+}
+
+/* 
+
+*/
+
+.container {
+  position: absolute;
+  top: 20%;
+  left: 1%;
+  width: 200px;
+  background-color: #cbcdd300;
+  padding: 10px;
+  min-height: 50px;
+
+  margin: 30px auto;
+}
+.container .input-box-wrapper {
+  position: relative;
+}
+.input-box-wrapper .box {
+  position: relative;
+  background-color: #f3f3f7;
+  display: flex;
+  align-items: center;
+  border: 1px solid #70707c8e;
+  border-bottom: 0;
+  padding: 2px;
+}
+.input-box-wrapper .box label {
+  color: #5e5a5a;
+  text-transform: capitalize;
+  margin-left: 20px;
+  cursor: pointer;
+  display: block;
+  width: 100%;
+}
+input[type="checkbox"] {
+  position: relative;
+  width: 22px;
+  height: 22px;
+  cursor: pointer;
+}
+.input-box-wrapper .box:not(:first-child) {
+  padding-left: 0px;
+}
+.input-box-wrapper .box:first-child {
+  border-radius: 15px 15px 0px 0px;
+  padding-right: 2px;
+}
+.input-box-wrapper .box:last-child {
+  border-radius: 0px 0px 15px 15px;
+  border-bottom: 1px solid#383854;
+}
+.print-values {
+  position: relative;
+  margin-top: 2rem;
+}
+.print-values p {
+  background-color: #1e1e2e;
+  padding: 16px;
+  color: #ffffff;
 }
